--- a/firewall/firewall_keepalive/index.html
+++ b/firewall/firewall_keepalive/index.html
@@ -122,6 +122,7 @@ You can allow firewall to accept vrrp protocol, which will allow you keepalive w
   
 <ul class="sub-menu">
 <li class=""><a href="https://tecnep.com/zimbra/zimbra_tips_tricks/">Zimbra Tips &amp; Tricks</a></li>
+<li class=""><a href="https://tecnep.com/zimbra/backup/">Backup</a></li>
 </ul>
   
 </li>
