--- a/glassfish/index.html
+++ b/glassfish/index.html
@@ -112,7 +112,7 @@ firewall-cmd --reload
 <div class="edit-meta">
 <br>
 <a href="https://github.com/pratikgautm/tecnep" class="edit-page"><i class="fas fa-pen-square"></i> Edit on GitHub</a>
-</div><nav class="pagination"><a class="nav nav-prev" href="https://tecnep.com/zimbra/zimbra_tips_tricks/" title="Zimbra Tips &amp; Tricks"><i class="fas fa-arrow-left" aria-hidden="true"></i> Prev - Zimbra Tips &amp; Tricks</a>
+</div><nav class="pagination"><a class="nav nav-prev" href="https://tecnep.com/zimbra/backup/" title="Backup"><i class="fas fa-arrow-left" aria-hidden="true"></i> Prev - Backup</a>
 <a class="nav nav-next" href="https://tecnep.com/system_resources/" title="System Resources">Next - System Resources <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer>
 <p class="powered"> Developers <a href="https://tecnep.com"> tecnep.com </a> </p>
@@ -164,6 +164,7 @@ firewall-cmd --reload
   
 <ul class="sub-menu">
 <li class=""><a href="https://tecnep.com/zimbra/zimbra_tips_tricks/">Zimbra Tips &amp; Tricks</a></li>
+<li class=""><a href="https://tecnep.com/zimbra/backup/">Backup</a></li>
 </ul>
   
 </li>
