--- a/keepalive/index.html
+++ b/keepalive/index.html
@@ -134,6 +134,7 @@ and &ldquo;BACKUP&rdquo; for secondary node. During the election, the priority o
   
 <ul class="sub-menu">
 <li class=""><a href="https://tecnep.com/zimbra/zimbra_tips_tricks/">Zimbra Tips &amp; Tricks</a></li>
+<li class=""><a href="https://tecnep.com/zimbra/backup/">Backup</a></li>
 </ul>
   
 </li>
