--- a/samba/index.html
+++ b/samba/index.html
@@ -204,6 +204,7 @@ echo &quot;test&quot; &gt; hello.txt
   
 <ul class="sub-menu">
 <li class=""><a href="https://tecnep.com/zimbra/zimbra_tips_tricks/">Zimbra Tips &amp; Tricks</a></li>
+<li class=""><a href="https://tecnep.com/zimbra/backup/">Backup</a></li>
 </ul>
   
 </li>
