--- a/zimbra/zimbra_tips_tricks/index.html
+++ b/zimbra/zimbra_tips_tricks/index.html
@@ -612,7 +612,7 @@ zmprov mcf zimbraMtaLmtpHostLookup native
 <br>
 <a href="https://github.com/pratikgautm/tecnep" class="edit-page"><i class="fas fa-pen-square"></i> Edit on GitHub</a>
 </div><nav class="pagination"><a class="nav nav-prev" href="https://tecnep.com/zimbra/" title="Zimbra"><i class="fas fa-arrow-left" aria-hidden="true"></i> Prev - Zimbra</a>
-<a class="nav nav-next" href="https://tecnep.com/glassfish/" title="Glassfish">Next - Glassfish <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+<a class="nav nav-next" href="https://tecnep.com/zimbra/backup/" title="Backup">Next - Backup <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer>
 <p class="powered"> Developers <a href="https://tecnep.com"> tecnep.com </a> </p>
 </footer>
@@ -663,6 +663,7 @@ zmprov mcf zimbraMtaLmtpHostLookup native
   
 <ul class="sub-menu">
 <li class="active"><a href="https://tecnep.com/zimbra/zimbra_tips_tricks/">Zimbra Tips &amp; Tricks</a></li>
+<li class=""><a href="https://tecnep.com/zimbra/backup/">Backup</a></li>
 </ul>
   
 </li>
