--- a/firewall/index.html
+++ b/firewall/index.html
@@ -116,6 +116,7 @@ Permanent configuration is loaded from XML files in <code>/usr/lib/firewalld</co
   
 <ul class="sub-menu">
 <li class=""><a href="https://tecnep.com/zimbra/zimbra_tips_tricks/">Zimbra Tips &amp; Tricks</a></li>
+<li class=""><a href="https://tecnep.com/zimbra/backup/">Backup</a></li>
 </ul>
   
 </li>
