--- a/firewall/rich_rule/index.html
+++ b/firewall/rich_rule/index.html
@@ -128,6 +128,7 @@ port protocol=&quot;tcp&quot; port=&quot;22&quot; accept'
   
 <ul class="sub-menu">
 <li class=""><a href="https://tecnep.com/zimbra/zimbra_tips_tricks/">Zimbra Tips &amp; Tricks</a></li>
+<li class=""><a href="https://tecnep.com/zimbra/backup/">Backup</a></li>
 </ul>
   
 </li>
