--- a/mailcleaner/mailcleaner_config/index.html
+++ b/mailcleaner/mailcleaner_config/index.html
@@ -204,6 +204,7 @@ If you want to select any domain to be not checked, mention it in the add an add
   
 <ul class="sub-menu">
 <li class=""><a href="https://tecnep.com/zimbra/zimbra_tips_tricks/">Zimbra Tips &amp; Tricks</a></li>
+<li class=""><a href="https://tecnep.com/zimbra/backup/">Backup</a></li>
 </ul>
   
 </li>
