--- a/system_resources/increase_hd/index.html
+++ b/system_resources/increase_hd/index.html
@@ -142,6 +142,7 @@ Then, create a new XFS partition.</p>
   
 <ul class="sub-menu">
 <li class=""><a href="https://tecnep.com/zimbra/zimbra_tips_tricks/">Zimbra Tips &amp; Tricks</a></li>
+<li class=""><a href="https://tecnep.com/zimbra/backup/">Backup</a></li>
 </ul>
   
 </li>
