--- a/zimbra/index.html
+++ b/zimbra/index.html
@@ -126,6 +126,7 @@ the Zimbra Global Address List, and provides user authentication. Zimbra can als
   
 <ul class="sub-menu">
 <li class=""><a href="https://tecnep.com/zimbra/zimbra_tips_tricks/">Zimbra Tips &amp; Tricks</a></li>
+<li class=""><a href="https://tecnep.com/zimbra/backup/">Backup</a></li>
 </ul>
   
 </li>
