--- a/dns/index.html
+++ b/dns/index.html
@@ -231,6 +231,10 @@ dig +trace tecnep.com
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
