--- a/dns/spf/index.html
+++ b/dns/spf/index.html
@@ -68,7 +68,7 @@ a = A record of the domain tecnep.com (also can send email)
 ipv4 = IP address to allow to send email
 </code></pre><pre><code>	~ = SOFTFAIL, Tagged as spam
 	- = HARDFAIL, Reject the email.
-	? + NEUTRAL, Result interpreted like NONE
+	? = NEUTRAL, Result interpreted like NONE
 </code></pre><p>It also has <code>redirect</code> and <code>include</code></p>
 <h6 id="redirect">Redirect</h6>
 <p>Example,</p>
@@ -203,6 +203,10 @@ nslookup -q=txt _spf.google.com
 </li>
 
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
   
 </li>
 </ul>
