--- a/firewall/firewall_keepalive/index.html
+++ b/firewall/firewall_keepalive/index.html
@@ -184,6 +184,10 @@ You can allow firewall to accept vrrp protocol, which will allow you keepalive w
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
