--- a/firewall/rich_rule/index.html
+++ b/firewall/rich_rule/index.html
@@ -190,6 +190,10 @@ port protocol=&quot;tcp&quot; port=&quot;22&quot; accept'
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
