--- a/kaspersky/index.html
+++ b/kaspersky/index.html
@@ -189,6 +189,10 @@ Systemctl enable kesl-supervisor
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
