--- a/mailcleaner/mailcleaner_config/index.html
+++ b/mailcleaner/mailcleaner_config/index.html
@@ -36,7 +36,7 @@ Requirements and planning Make sure that your hardware or Virtual Machine meets 
 Requirements and planning Make sure that your hardware or Virtual Machine meets the minimum requirements:
 ▪ 2 CPU, 4 GB RAM ▪ 60 GB HDD ▪ 100 Mbps network card ▪ 2 Mbps network connectivity Virtual Machine Download &amp; Installation: Download the latest MailCleaner Virtual Machine corresponding to your virtualization environment here:https://www.">
 
-<meta itemprop="wordCount" content="1603">
+<meta itemprop="wordCount" content="1601">
 <meta itemprop="image" content="https://tecnep.com/images/og-image.png"/>
 
 
@@ -147,7 +147,7 @@ If you want to select any domain to be not checked, mention it in the add an add
 <p>Verify the incoming and outgoing status of mails.</p>
 <p><img src="8.png" alt="image"></p>
 <hr>
-<p>By : Aayush koirala
+<p>Aayush koirala
 <a href="mailto:koiralaaayush20@gmail.com">koiralaaayush20@gmail.com</a></p>
 <div class="edit-meta">
 <br>
@@ -264,6 +264,10 @@ If you want to select any domain to be not checked, mention it in the add an add
 </li>
 
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
   
 </li>
 </ul>
