--- a/samba/index.html
+++ b/samba/index.html
@@ -153,7 +153,7 @@ echo &quot;test&quot; &gt; hello.txt
 <br>
 <a href="https://github.com/pratikgautm/tecnep" class="edit-page"><i class="fas fa-pen-square"></i> Edit on GitHub</a>
 </div><nav class="pagination"><a class="nav nav-prev" href="https://tecnep.com/exchnage/" title="Exchange"><i class="fas fa-arrow-left" aria-hidden="true"></i> Prev - Exchange</a>
-<a class="nav nav-next" href="https://tecnep.com/hardening/" title="System Hardening">Next - System Hardening <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+<a class="nav nav-next" href="https://tecnep.com/vmware/" title="Vmware">Next - Vmware <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer>
 <p class="powered"> Developers <a href="https://tecnep.com"> tecnep.com </a> </p>
 </footer>
@@ -264,6 +264,10 @@ echo &quot;test&quot; &gt; hello.txt
 </li>
 
 <li class="parent active"><a href="https://tecnep.com/samba/">Samba</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
   
 </li>
 </ul>
