--- a/zimbra/index.html
+++ b/zimbra/index.html
@@ -188,6 +188,10 @@ the Zimbra Global Address List, and provides user authentication. Zimbra can als
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
