--- a/zimbra/zimbra_tips_tricks/index.html
+++ b/zimbra/zimbra_tips_tricks/index.html
@@ -725,6 +725,10 @@ zmprov mcf zimbraMtaLmtpHostLookup native
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
