--- a/dns/dmarc/index.html
+++ b/dns/dmarc/index.html
@@ -211,6 +211,10 @@ header.from = mail.tecnep.com
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
