--- a/glassfish/index.html
+++ b/glassfish/index.html
@@ -226,6 +226,10 @@ firewall-cmd --reload
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
