--- a/hardening/index.html
+++ b/hardening/index.html
@@ -384,6 +384,10 @@ yum install lynis -y
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
