--- a/nas_san/index.html
+++ b/nas_san/index.html
@@ -165,6 +165,10 @@
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
