--- a/php_nginx_mysql/index.html
+++ b/php_nginx_mysql/index.html
@@ -308,6 +308,10 @@ catch(PDOException $e)
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
