--- a/redis/index.html
+++ b/redis/index.html
@@ -218,6 +218,10 @@ Following are the helpful redis command</p>
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
