--- a/snmp/index.html
+++ b/snmp/index.html
@@ -223,6 +223,10 @@ systemctl start snmpd
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
