--- a/system_resources/increase_hd/index.html
+++ b/system_resources/increase_hd/index.html
@@ -204,6 +204,10 @@ Then, create a new XFS partition.</p>
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
