--- a/zimbra/backup/index.html
+++ b/zimbra/backup/index.html
@@ -198,6 +198,10 @@ done &lt; $FILE
 <li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
 </ul>
 </nav>
 
