--- a/dns/dkim/index.html
+++ b/dns/dkim/index.html
@@ -179,10 +179,6 @@ p=MIGfMA0GCSqGSI...... is the actual DKIM public key of 1024 bits
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -212,6 +208,10 @@ p=MIGfMA0GCSqGSI...... is the actual DKIM public key of 1024 bits
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
