--- a/dns/dmarc/index.html
+++ b/dns/dmarc/index.html
@@ -98,7 +98,7 @@ header.from = mail.tecnep.com
 <br>
 <a href="https://github.com/pratikgautm/tecnep" class="edit-page"><i class="fas fa-pen-square"></i> Edit on GitHub</a>
 </div><nav class="pagination"><a class="nav nav-prev" href="https://tecnep.com/dns/dkim/" title="DKIM"><i class="fas fa-arrow-left" aria-hidden="true"></i> Prev - DKIM</a>
-<a class="nav nav-next" href="https://tecnep.com/useful_command/" title="Useful command">Next - Useful command <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+<a class="nav nav-next" href="https://tecnep.com/keepalive/" title="Keepalive">Next - Keepalive <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer>
 <p class="powered"> Developers <a href="https://tecnep.com"> tecnep.com </a> </p>
 </footer>
@@ -180,10 +180,6 @@ header.from = mail.tecnep.com
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -213,6 +209,10 @@ header.from = mail.tecnep.com
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
