--- a/firewall/index.html
+++ b/firewall/index.html
@@ -147,10 +147,6 @@ Permanent configuration is loaded from XML files in <code>/usr/lib/firewalld</co
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -180,6 +176,10 @@ Permanent configuration is loaded from XML files in <code>/usr/lib/firewalld</co
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
