--- a/firewall/rich_rule/index.html
+++ b/firewall/rich_rule/index.html
@@ -159,10 +159,6 @@ port protocol=&quot;tcp&quot; port=&quot;22&quot; accept'
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -192,6 +188,10 @@ port protocol=&quot;tcp&quot; port=&quot;22&quot; accept'
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
