--- a/glassfish/index.html
+++ b/glassfish/index.html
@@ -195,10 +195,6 @@ firewall-cmd --reload
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -228,6 +224,10 @@ firewall-cmd --reload
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
