--- a/haproxy/index.html
+++ b/haproxy/index.html
@@ -73,7 +73,6 @@ This algorithm hashes either the left part of the URI, or the whole URI and divi
 This static algorithm can only be used on an HTTP backend. The URL parameter that’s specified is looked up in the query string of each HTTP GET request. If the parameter that’s found is followed by an equal sign and value, the value is hashed and divided by the total weight of running servers.</p>
 <h5 id="installation">Installation</h5>
 <h5 id="configuration">Configuration</h5>
-<p>figure</p>
 <pre><code>global
         log 127.0.0.1 local2
         log 127.0.0.1 local1 notice
@@ -234,10 +233,6 @@ Cookie in haproxy
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -267,6 +262,10 @@ Cookie in haproxy
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
