--- a/kaspersky/index.html
+++ b/kaspersky/index.html
@@ -158,10 +158,6 @@ Systemctl enable kesl-supervisor
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -191,6 +187,10 @@ Systemctl enable kesl-supervisor
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
