--- a/php_nginx_mysql/index.html
+++ b/php_nginx_mysql/index.html
@@ -277,10 +277,6 @@ catch(PDOException $e)
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -310,6 +306,10 @@ catch(PDOException $e)
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
