--- a/samba/index.html
+++ b/samba/index.html
@@ -235,10 +235,6 @@ echo &quot;test&quot; &gt; hello.txt
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -268,6 +264,10 @@ echo &quot;test&quot; &gt; hello.txt
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
