--- a/system_resources/increase_hd/index.html
+++ b/system_resources/increase_hd/index.html
@@ -173,10 +173,6 @@ Then, create a new XFS partition.</p>
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -206,6 +202,10 @@ Then, create a new XFS partition.</p>
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
