--- a/tomcat/index.html
+++ b/tomcat/index.html
@@ -148,10 +148,6 @@
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -181,6 +177,10 @@
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
