--- a/zimbra/index.html
+++ b/zimbra/index.html
@@ -157,10 +157,6 @@ the Zimbra Global Address List, and provides user authentication. Zimbra can als
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -190,6 +186,10 @@ the Zimbra Global Address List, and provides user authentication. Zimbra can als
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
