--- a/zimbra/zimbra_tips_tricks/index.html
+++ b/zimbra/zimbra_tips_tricks/index.html
@@ -694,10 +694,6 @@ zmprov mcf zimbraMtaLmtpHostLookup native
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -727,6 +723,10 @@ zmprov mcf zimbraMtaLmtpHostLookup native
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
