--- a/firewall/firewall_keepalive/index.html
+++ b/firewall/firewall_keepalive/index.html
@@ -153,10 +153,6 @@ You can allow firewall to accept vrrp protocol, which will allow you keepalive w
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -186,6 +182,10 @@ You can allow firewall to accept vrrp protocol, which will allow you keepalive w
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
