--- a/hardening/index.html
+++ b/hardening/index.html
@@ -353,10 +353,6 @@ yum install lynis -y
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -386,6 +382,10 @@ yum install lynis -y
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
