--- a/keepalive/index.html
+++ b/keepalive/index.html
@@ -45,7 +45,6 @@
 <div class="content-container">
 <main><h1>Keepalive</h1><p>Keepalived is use to set up a highly available web service by using a floating IP address that can be moved between two capable web servers. The keepalived daemon can be used to monitor services or systems and to automatically failover to a standby if there&rsquo;s any problems occur. If the primary server goes down, the floating IP will be moved to the second server automatically, allowing service to resume by the help of floating IP.</p>
 <p>Keepalive provides frameworks for both load balancing and high availability mechanism. Load balancing framework relies on <code>linux virtual server (LVS)</code> kernel module based on layer 4. High availability is achieved by VRRP (Virtual redundancy routing protocol).</p>
-<p>Figure : virtual ip given to two servers</p>
 <h5 id="installation">Installation</h5>
 <p>Use the following command,</p>
 <pre><code>yum install keepalived -y
@@ -83,7 +82,7 @@ and &ldquo;BACKUP&rdquo; for secondary node. During the election, the priority o
 <div class="edit-meta">
 <br>
 <a href="https://github.com/pratikgautm/tecnep" class="edit-page"><i class="fas fa-pen-square"></i> Edit on GitHub</a>
-</div><nav class="pagination"><a class="nav nav-prev" href="https://tecnep.com/useful_command/" title="Useful command"><i class="fas fa-arrow-left" aria-hidden="true"></i> Prev - Useful command</a>
+</div><nav class="pagination"><a class="nav nav-prev" href="https://tecnep.com/dns/dmarc/" title="DMARC"><i class="fas fa-arrow-left" aria-hidden="true"></i> Prev - DMARC</a>
 <a class="nav nav-next" href="https://tecnep.com/ssl/" title="SSL">Next - SSL <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer>
 <p class="powered"> Developers <a href="https://tecnep.com"> tecnep.com </a> </p>
@@ -166,10 +165,6 @@ and &ldquo;BACKUP&rdquo; for secondary node. During the election, the priority o
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class="parent active"><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -199,6 +194,10 @@ and &ldquo;BACKUP&rdquo; for secondary node. During the election, the priority o
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
