--- a/mailcleaner/index.html
+++ b/mailcleaner/index.html
@@ -180,10 +180,6 @@ Antivirus are the program to protect the system from virus. ClamAV open source a
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -213,6 +209,10 @@ Antivirus are the program to protect the system from virus. ClamAV open source a
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
