--- a/redis/index.html
+++ b/redis/index.html
@@ -49,8 +49,14 @@
 <li>Supports data structure such as strings, hashes. list, sets, sorted sets.</li>
 <li>Each time you query a database or update data in a database, you only access the main memory</li>
 </ul>
-<p>Redis-cli
-Following are the helpful redis command</p>
+<h5 id="installation">Installation</h5>
+<pre><code>yum install epel-release
+yum install redis -y
+</code></pre><p>Start and enable the service,</p>
+<pre><code>systemctl start redis
+systemctl enable redis
+</code></pre><h5 id="redis-cli">Redis-cli</h5>
+<p>Following are the helpful redis command</p>
 <p>Check redis file configuration</p>
 <pre><code>redis-server /etc/redis.conf
 </code></pre><p>login to Redis server host 10.10.18.6 with default port 6379 and password</p>
@@ -187,10 +193,6 @@ Following are the helpful redis command</p>
   
 </li>
 
-<li class=""><a href="https://tecnep.com/useful_command/">Useful command</a>
-  
-</li>
-
 <li class=""><a href="https://tecnep.com/keepalive/">Keepalive</a>
   
 </li>
@@ -220,6 +222,10 @@ Following are the helpful redis command</p>
 </li>
 
 <li class=""><a href="https://tecnep.com/vmware/">Vmware</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/mysql/">Mysql/Mariadb</a>
   
 </li>
 </ul>
